invoice lookup sass trying to fix broken sap datepicker on firefox/edge

--- a/src/app/invoice-lookup/invoice-lookup.component.scss
+++ b/src/app/invoice-lookup/invoice-lookup.component.scss
@@ -146,6 +146,10 @@
 
         & .fd-form__item {
           min-height: 0;
+
+          & input {
+            width: 90%;
+          }
         }
       }
     }
